Make geo path optional (rebase on develop)